kube/components/data-orchestration/airflow/airflow-webserver-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-web
  template:
    metadata:
      labels:
        app: airflow-web
    spec:
      containers:
        - name: airflow-web
          image: apache/airflow:2.0.2
          ports:
            - containerPort: 8080
